First version in jupyter notebook finish.

--- a/python/linked_list/linked_list.ipynb
+++ b/python/linked_list/linked_list.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,9 +90,25 @@
     "        self.list_size += 1\n",
     "        \n",
     "    \n",
-    "    def insert_position(self, value, pos):\n",
-    "        pass\n",
-    "    \n",
+    "    def insert_position(self, value, target_pos):\n",
+    "        \n",
+    "        new_node = Node(value)\n",
+    "        \n",
+    "        current_node = self.head\n",
+    "        prev_node = None\n",
+    "        \n",
+    "        current_pos = 0\n",
+    "        while current_pos != target_pos:\n",
+    "            prev_node = current_node\n",
+    "            current_node = current_node.next\n",
+    "            \n",
+    "            current_pos += 1\n",
+    "        else:\n",
+    "            new_node.next = current_node\n",
+    "            prev_node.next = new_node\n",
+    "            \n",
+    "        self.list_size += 1\n",
+    "        \n",
     "    \n",
     "    def delete_begin(self):\n",
     "        \n",
@@ -117,8 +133,21 @@
     "        self.list_size -= 1\n",
     "\n",
     "    \n",
-    "    def delete_in_position(self, pos):\n",
-    "        pass\n",
+    "    def delete_in_position(self, target_pos):\n",
+    "              \n",
+    "        current_node = self.head\n",
+    "        prev_node = None\n",
+    "        \n",
+    "        current_pos = 0\n",
+    "        while current_pos != target_pos:\n",
+    "            prev_node = current_node\n",
+    "            current_node = current_node.next\n",
+    "            \n",
+    "            current_pos += 1\n",
+    "        else:\n",
+    "            prev_node.next = current_node.next\n",
+    "            \n",
+    "        self.list_size -= 1\n",
     "        "
    ]
   },
@@ -131,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8 -> 5 -> 10 -> 7 -> 6 -> 6 -> 7 -> 9 -> 1 -> 7\n"
+      "10 -> 4 -> 2 -> 7 -> 6 -> 10 -> 10 -> 5 -> 7 -> 4\n"
      ]
     }
    ],
@@ -176,19 +205,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8 -> 5 -> 10 -> 7 -> 6 -> 6 -> 7 -> 9 -> 1\n"
+      "10 -> 4 -> 2 -> 6 -> 10 -> 10 -> 5 -> 7 -> 4\n"
      ]
     }
    ],
    "source": [
-    "llist.delete_end()\n",
+    "llist.delete_in_position(3)\n",
     "llist.print_simple_list()"
    ]
   },
@@ -196,14 +225,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Choose an option"
+    "## Menú"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   __ _     _                     _                    _\n",
+      "  / /(_)___| |_ __ _    ___ _ __ | | __ _ ______ _  __| | __ _\n",
+      " / / | / __| __/ _` |  / _ \\ '_ \\| |/ _` |_  / _` |/ _` |/ _` |\n",
+      "/ /__| \\__ \\ || (_| | |  __/ | | | | (_| |/ / (_| | (_| | (_| |\n",
+      "\\____/_|___/\\__\\__,_|  \\___|_| |_|_|\\__,_/___\\__,_|\\__,_|\\__,_|\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"   __ _     _                     _                    _\")\n",
+    "print(\"  / /(_)___| |_ __ _    ___ _ __ | | __ _ ______ _  __| | __ _\")\n",
+    "print(\" / / | / __| __/ _` |  / _ \\ '_ \\| |/ _` |_  / _` |/ _` |/ _` |\")\n",
+    "print(\"/ /__| \\__ \\ || (_| | |  __/ | | | | (_| |/ / (_| | (_| | (_| |\")\n",
+    "print(\"\\____/_|___/\\__\\__,_|  \\___|_| |_|_|\\__,_/___\\__,_|\\__,_|\\__,_|\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t 1 --> Insert begin\n",
+      "\t 2 --> Insert end\n",
+      "\t 3 --> Insert position\n",
+      "\t 4 --> Delete begin\n",
+      "\t 5 --> Delete end\n",
+      "\t 6 --> Delete in position\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Select an option:  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "menu = {\n",
+    "    1: \"Insert begin\",\n",
+    "    2: \"Insert end\",\n",
+    "    3: \"Insert position\",\n",
+    "    4: \"Delete begin\",\n",
+    "    5: \"Delete end\",\n",
+    "    6: \"Delete in position\",\n",
+    "}\n",
+    "\n",
+    "for k, v in menu.items():\n",
+    "    print(\"\\t\", k, '-->', v)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "\n",
+    "option = input(\"Select an option: \")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t 1 --> Insert begin\n",
+      "\t 2 --> Insert end\n",
+      "\t 3 --> Insert position\n",
+      "\t 4 --> Delete begin\n",
+      "\t 5 --> Delete end\n",
+      "\t 6 --> Delete in position\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
