python linked list ready

--- a/python/linked_list/linked_list.ipynb
+++ b/python/linked_list/linked_list.ipynb
@@ -11,7 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\" _     _       _            _   _     _     _   \")\n",
+    "print(\"| |   (_)     | |          | | | |   (_)   | |  \")\n",
+    "print(\"| |    _ _ __ | | _____  __| | | |    _ ___| |_ \")\n",
+    "print(\"| |   | | '_ \\| |/ / _ \\/ _` | | |   | / __| __|\")\n",
+    "print(\"| |___| | | | |   <  __/ (_| | | |___| \\__ \\ |_ \")\n",
+    "print(\"\\_____/_|_| |_|_|\\_\\___|\\__,_| \\_____/_|___/\\__|\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,17 +196,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 -> 4 -> 2 -> 7 -> 6 -> 10 -> 10 -> 5 -> 7 -> 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "llist = LinkedList()\n",
     "\n",
@@ -205,125 +211,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 -> 4 -> 2 -> 6 -> 10 -> 10 -> 5 -> 7 -> 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "llist.delete_in_position(3)\n",
     "llist.print_simple_list()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Menú"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   __ _     _                     _                    _\n",
-      "  / /(_)___| |_ __ _    ___ _ __ | | __ _ ______ _  __| | __ _\n",
-      " / / | / __| __/ _` |  / _ \\ '_ \\| |/ _` |_  / _` |/ _` |/ _` |\n",
-      "/ /__| \\__ \\ || (_| | |  __/ | | | | (_| |/ / (_| | (_| | (_| |\n",
-      "\\____/_|___/\\__\\__,_|  \\___|_| |_|_|\\__,_/___\\__,_|\\__,_|\\__,_|\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"   __ _     _                     _                    _\")\n",
-    "print(\"  / /(_)___| |_ __ _    ___ _ __ | | __ _ ______ _  __| | __ _\")\n",
-    "print(\" / / | / __| __/ _` |  / _ \\ '_ \\| |/ _` |_  / _` |/ _` |/ _` |\")\n",
-    "print(\"/ /__| \\__ \\ || (_| | |  __/ | | | | (_| |/ / (_| | (_| | (_| |\")\n",
-    "print(\"\\____/_|___/\\__\\__,_|  \\___|_| |_|_|\\__,_/___\\__,_|\\__,_|\\__,_|\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\t 1 --> Insert begin\n",
-      "\t 2 --> Insert end\n",
-      "\t 3 --> Insert position\n",
-      "\t 4 --> Delete begin\n",
-      "\t 5 --> Delete end\n",
-      "\t 6 --> Delete in position\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Select an option:  2\n"
-     ]
-    }
-   ],
-   "source": [
-    "menu = {\n",
-    "    1: \"Insert begin\",\n",
-    "    2: \"Insert end\",\n",
-    "    3: \"Insert position\",\n",
-    "    4: \"Delete begin\",\n",
-    "    5: \"Delete end\",\n",
-    "    6: \"Delete in position\",\n",
-    "}\n",
-    "\n",
-    "for k, v in menu.items():\n",
-    "    print(\"\\t\", k, '-->', v)\n",
-    "print(\"\\n\")\n",
-    "\n",
-    "\n",
-    "option = input(\"Select an option: \")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\t 1 --> Insert begin\n",
-      "\t 2 --> Insert end\n",
-      "\t 3 --> Insert position\n",
-      "\t 4 --> Delete begin\n",
-      "\t 5 --> Delete end\n",
-      "\t 6 --> Delete in position\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
